Choose smaller objects for pagination keys